--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
 install: bundle install --deployment --without debugger
 
 rvm:
-  - 1.8.7
+#  - 1.8.7 cannot run on ruby 1.8 because mediawiki-gateway requires at least Ruby 1.9
   - 1.9.3
   - 2.0
   - 2.1
