--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,14 @@ install: bundle install --deployment --without debugger
 rvm:
 #  - 1.8.7 cannot run on ruby 1.8 because mediawiki-gateway requires at least Ruby 1.9
   - 1.9.3
-  - 2.0
-  - 2.1
-  - ruby-head
+  - 2.1.2
+  - 2.2.0
+
+matrix:
+  allow_failures:
+    - rvm: 2.2.0
+    - rvm: 2.1.2
+
 notifications:
   email:
     recipients:
